correct_shift_&_arrow_positioning

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -39,14 +39,16 @@
 
 .arrow {
   position: absolute;
-  left: 1%;
-  width: 30px;
-  height: 30px;
-  top: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  top: 0%;
   border: none;
   background: transparent;
   font-size: 35px;
-  color: rgb(120, 72, 164);
+  color: rgb(158, 122, 192);
 }
 
 .selector select {
